--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="https://maps.google.com/maps/api/js?sensor=false"></script>
 <meta charset=utf-8 />
 <title>Transit Trip Planner</title>
 
@@ -126,6 +127,35 @@ body{
   background-color: #6FA349 !important;
 }
 
+#scheduleDiv {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  width: 890px;
+  height: 527px;
+  display: none;
+  font-family: 'GothamBold', 'Arial', sans-serif;
+  color: #FFFFFF;
+  z-index: 20;
+  background-color: #304F19;
+}
+
+#skedInput {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 220px;
+  height: 527px;
+}
+
+#scheduleDisplay {
+	position: absolute;
+	top: 15px;
+    left: 245px;
+    width: 620px;
+    height: 497px;
+    background-color: #000000;
+}
 
 #info {
   background-color: #222B5E;
@@ -160,6 +190,53 @@ body{
 	font-size:x-large;
 }
 
+#mapCanvas {
+	width: 700px;
+	height: 500px;
+	float:left;
+}
+
+#planBtnContainer {
+	background-color:#DB5902;
+}
+
+#btnSave, #btnLoad, #btnClear {
+	width:100px;
+	height:25px;
+}
+
+#btnGo {
+	width:40px;
+	height:25px;
+}
+
+#busRoutes {
+	background-color:#DB5902;
+	height:500px;
+	width:190px;
+	float:left;
+	text-align:center;
+	font-family: 'GothamBold', 'Arial', sans-serif;
+	color: #FFFFFF;
+}
+
+#route {
+	margin-top:5px;
+	margin-left:2px;
+	height:150px;
+	width:180px;
+	border:2px solid;
+	border-radius:3px;
+	border-color:#000000;
+	box-shadow: inset 0 0 0 3px rgba(255,255,255,.5);
+	text-align:center;
+	color:#FFFFFF;
+}
+
+#routeInfo {
+	text-alight:left;
+}
+
 </style>
 </head>
 
@@ -180,12 +257,37 @@ body{
 	</div>
 	
 	<div id="planDiv">
-		Some sort of application goes here...
+		<div id="planBtnContainer">
+			<button id="btnSave" type="button">Save</button>
+			<button id="btnLoad" type="button">Load</button>
+			<button id="btnClear" onclick="clearMap()" type="button">Clear</button>
+		</div>
+		<div id="mapCanvas"></div>
+		<div id="busRoutes">BUS ROUTES</div>
 	</div>
   
 	<div id="plan">
 		<div class="label">
 		PLAN A TRIP
+		</div>
+	</div>
+
+	<div id="scheduleDiv">
+		<div id="skedInput">
+			<form>
+				<br>
+				Stop Number<br>
+				<input type="text" placeholder="ex. 12345">
+				<button id="btnGo" type="button">GO</button><br><br>
+			</form>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OR<br><br>
+			<form>
+				Route Number<br>
+				<input type="text" placeholder="ex. 21">
+				<button id="btnGo" type="button">GO</button><br><br>
+			</form>
+		</div>
+		<div id="scheduleDisplay">
 		</div>
 	</div>
   
@@ -219,6 +321,9 @@ body{
 
 <script>
 var globalVars = {};
+var map;
+var mapService = new google.maps.DirectionsService();
+var points = new Array(); //holds all points on the map
 
 $(document).ready(function(){
 
@@ -229,7 +334,9 @@ $(document).ready(function(){
 	  $(this).css('background-color','#E37C36');
 	  $(this).animate({width: ['903px', 'swing'], height: ['570px', 'swing']}, { duration: "slow", easing: "easein" });
 	  
-	  $('#backBtn').fadeIn(800);
+	  $('#backBtn').fadeIn(800, function() {
+		initialize();
+	  });
 	  globalVars.activeDiv = "#plan";
 	  displayDiv(globalVars.activeDiv,true);
 	});
@@ -288,6 +395,145 @@ function displayDiv(var1,var2) {
 	}else{
 		$(var1 + 'Div').toggle();
 	}
+}
+
+//loads the map
+function initialize() {
+    var map_canvas = document.getElementById('mapCanvas');
+    var map_options = {
+		center: new google.maps.LatLng(49.8994, -97.1392), //center map above winnipeg
+        zoom: 14,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+    }
+    map = new google.maps.Map(map_canvas, map_options)
+	
+	directionsRenderer = new google.maps.DirectionsRenderer();
+	directionsRenderer.setMap(map);
+	var renderer_options = {
+		draggable: true
+	}
+	
+	google.maps.event.addListener(map, "dblclick", function(event) {
+		var origin = event.latLng;
+		points.push(origin);
+		findRoutes();
+	});
+	
+	google.maps.event.addListener(directionsRenderer, 'directions_changed');	
+}
+
+
+function findRoutes() {
+	var route = new Array();
+	if (points.length == 2)
+	{
+		var i;
+		for (i = 1; i < points.length-1; i++) {
+			var address = points[i];
+			if (address !== "") {
+				route.push({
+					location: address,
+					stopover: true
+				});
+			}
+		}
+		draw(points[0], points[points.length - 1], route);
+		populateBusRoutes(points[0], points[points.length-1]);
+	} else if (points.length == 1) {
+		draw(points[points.length - 1], points[points.length - 1], route); //draw first point
+	}
+	
+}
+//draws route on map
+function draw(originPoint, destinationPoint, route) {
+    var request = '';
+
+    if (points.length > 1) {
+        request = {
+            origin: originPoint,
+            destination: destinationPoint,
+            waypoints: route,
+            optimizeWaypoints: true,
+            travelMode: google.maps.DirectionsTravelMode.DRIVING
+        };
+    } else if (points.length == 1){
+        request = {
+            origin: originPoint,
+            destination: destinationPoint,
+            travelMode: google.maps.DirectionsTravelMode.DRIVING
+        };
+    }
+    mapService.route(request, function (response, status) {
+        if (status == google.maps.DirectionsStatus.OK) {
+            directionsRenderer.setDirections(response);
+        }
+    });
+}
+
+function populateBusRoutes(lon, lat) {
+
+	//doesn't work... sadly
+	/*$.getJSON('http://whateverorigin.org/get?url=' + encodeURIComponent('http://api.winnipegtransit.com/stops.json?lon=-97.138&api-key=fynPUFGaKVGpCwXZatEl&lat=49.895&distance=250') + '&callback=?', function(data){
+		alert(data.contents);
+	});*/
+	
+	var date = new Date().addMinutes(2);
+	var stops = new Array();
+	stops.push( {
+		key: 63,
+		name: "Eastbound Portage at Main",
+		direction: "Eastbound",
+		latitude: "49.89511",
+		longitude: "-97.13715",
+		time: "" + date.getHours() + ":" + date.getMinutes()
+		} );
+	date = new Date().addMinutes(8);
+	stops.push( {
+		key: 62,
+		name: "Westbound Portage at Main",
+		direction: "Westbound",
+		latitude: "49.89532",
+		longitude: "-97.13715",
+		time: date.getHours() + ":" + date.getMinutes()
+		} );
+	date = new Date().addMinutes(10);
+	stops.push( {
+		key: 27,
+		name: "Northbound Main at Pioneer",
+		direction: "Northbound",
+		latitude: "49.89436",
+		longitude: "-97.1376",
+		time: date.getHours() + ":" + date.getMinutes()
+		} );
+		
+	//to add (?): clicking on a stop makes additional information show up?
+	var list = document.getElementById('busRoutes');
+	for (var i=0; i<stops.length;i++) {
+		var newDiv = document.createElement('div');
+		var newDivId = "route";
+		newDiv.setAttribute('id',newDivId);
+		newDiv.innerHTML = '<h1>Bus: #' + stops[i].key + '<h1>';
+		
+		var infoDiv = document.createElement('div');
+		infoDiv.setAttribute('id',"routeInfo");		
+		infoDiv.innerHTML = 'Time: ' + stops[i].time + '<br/>Direction: ' + stops[i].direction + '<br/>';
+		
+		newDiv.appendChild(infoDiv);
+		list.appendChild(newDiv);		
+	}
+	
+
+}
+
+Date.prototype.addMinutes= function(h){
+    this.setMinutes(this.getMinutes()+h);
+    return this;
+}
+
+function clearMap() {
+	initialize();
+	points = new Array();
+	document.getElementById("busRoutes").innerHTML = "BUS ROUTES";
 }
 
 </script>
