--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script src="https://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&sensor=true"></script>
 <meta charset=utf-8 />
 <title>Transit Trip Planner</title>
 
@@ -418,8 +418,6 @@ function initialize() {
 		points.push(origin);
 		findRoutes();
 	});
-	
-	google.maps.event.addListener(directionsRenderer, 'directions_changed');	
 }
 
 
