Calling clearMap when pressing back button
clearMap() is called to clear the map when pressing the back button.

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@ $(document).ready(function(){
 		if ( globalVars.activeDiv == "#plan" ){
 			$(globalVars.activeDiv).css('background-color','#DB5902');
 			displayDiv(globalVars.activeDiv);
+			clearMap();
 		}else if ( globalVars.activeDiv == "#schedule" ){
 			$(globalVars.activeDiv).css('background-color','#477725');
 			displayDiv(globalVars.activeDiv);
