Added saving and loading routes

--- a/index.html
+++ b/index.html
@@ -323,12 +323,15 @@ body{
 	
 	<div id="planDiv">
 		<div id="planBtnContainer">
-			<button id="btnSave" type="button">Save</button>
-			<button id="btnLoad" type="button">Load</button>
+			<button id="btnSave" onclick="saveMap()" type="button">Save</button>
+			<button id="btnLoad" onclick="loadMap()" type="button">Load</button>
 			<button id="btnClear" onclick="clearMap()" type="button">Clear</button>
 		</div>
 		<div id="mapCanvas"></div>
-		<div id="busRoutes">BUS ROUTES</div>
+		<div id="busRoutes">Getting Started!
+		<br/><br/><br/><br/><br/><br/><br/><br/><br/><u>Step 1:</u><br/>
+		Double-click on the map to select your <b>origin</b>.
+		</div>
 	</div>
   
 	<div id="plan">
@@ -390,7 +393,7 @@ body{
 		<div class="infoDivBox" id="infoDivmaps">
 			<h2>Maps</h2>
 			<br>
-			A page for maps.
+			A page for maps.3.
 		</div>
 		
 		<div class="infoDivBox" id="infoDivfaq">
@@ -435,6 +438,7 @@ var globalVars = {};
 var map;
 var mapService = new google.maps.DirectionsService();
 var points = new Array(); //holds all points on the map
+var savedPoints = new Array();
 
 $(document).ready(function(){
 
@@ -601,10 +605,10 @@ function findRoutes() {
 				});
 			}
 		}
-		draw(points[0], points[points.length - 1], route);
-		populateBusRoutes(points[0], points[points.length-1]);
+		draw(points[0], points[1], route);
+		populateBusRoutes(points[0], points[1]);
 	} else if (points.length == 1) {
-		draw(points[points.length - 1], points[points.length - 1], route); //draw first point
+		draw(points[0], points[0], route); //draw first point
 	}
 	
 }
@@ -623,9 +627,10 @@ function draw(originPoint, destinationPoint, route) {
             travelMode: google.maps.DirectionsTravelMode.DRIVING
         };
     } else if (points.length == 1){
+		document.getElementById("busRoutes").innerHTML = "Getting Started!<br/><br/><br/><br/><br/><br/><br/><br/><br/><u>Step 2:</u><br/>Double-click on the map to select your <b>destination</b>."
         request = {
             origin: originPoint,
-            destination: destinationPoint,
+            destination: originPoint,
             travelMode: google.maps.DirectionsTravelMode.DRIVING
         };
     }
@@ -638,11 +643,6 @@ function draw(originPoint, destinationPoint, route) {
 
 
 function populateBusRoutes(lon, lat) {
-
-	//doesn't work... sadly :(
-	/*$.getJSON('http://whateverorigin.org/get?url=' + encodeURIComponent('http://api.winnipegtransit.com/stops.json?lon=-97.138&api-key=fynPUFGaKVGpCwXZatEl&lat=49.895&distance=250') + '&callback=?', function(data){
-		alert(data.contents);
-	});*/
 	
 	var date = new Date().addMinutes(2);
 	var stops = new Array();
@@ -675,6 +675,7 @@ function populateBusRoutes(lon, lat) {
 		
 	//to add (?): clicking on a stop makes additional information show up?
 	var list = document.getElementById('busRoutes');
+	list.innerHTML = "BUS ROUTES";
 	for (var i=0; i<stops.length;i++) {
 		var newDiv = document.createElement('div');
 		var newDivId = "route";
@@ -688,9 +689,7 @@ function populateBusRoutes(lon, lat) {
 		newDiv.appendChild(infoDiv);
 		list.appendChild(newDiv);		
 	}
-	
 }
-
 
 Date.prototype.addMinutes= function(h){
     this.setMinutes(this.getMinutes()+h);
@@ -701,7 +700,28 @@ Date.prototype.addMinutes= function(h){
 function clearMap() {
 	initialize();
 	points = new Array();
-	document.getElementById("busRoutes").innerHTML = "BUS ROUTES";
+	
+	var routes = document.getElementById("busRoutes").innerHTML = "Getting Started!<br/><br/><br/><br/><br/><br/><br/><br/><br/><u>Step 1:</u><br/>Double-click on the map to select your <b>origin</b>."
+}
+
+function saveMap() {
+	savedPoints = new Array();
+	if (points.length > 0) {
+		for (var i = 0; i < points.length; i++) {
+			savedPoints.push(points[i]);
+		}
+	}
+}
+
+function loadMap() {
+	clearMap();
+	if (savedPoints.length > 0) {
+		points = new Array();
+		for (var i = 0; i < savedPoints.length; i++) {
+			points.push(savedPoints[i]);
+		}
+	}
+	findRoutes();
 }
 
 </script>
